[package]
name = "snap-coin-node"
version = "0.1.0"
edition = "2024"
authors = ["Ice"]
description = "A simple CLI for hosting a Snap Coin node"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
console-subscriber = "0.5.0"
crossterm = "0.29.0"
snap-coin = "1.0.2"
tokio = { version = "1.48.0", features = ["full", "tracing"] }
tracing-subscriber = "0.3.22"
